--- a/Oct20InClassAssignment.ipynb
+++ b/Oct20InClassAssignment.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Addition Tests"
+    "### Addition Tests"
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Subtraction Tests"
+    "### Subtraction Tests"
    ]
   },
   {
@@ -883,16 +883,12 @@
    "source": [
     "At first, we tried to test whether or not pow() works correctly with a first parameter between -1 and 0 and a second parameter between -1 and 0.\n",
     "\n",
-    "Math does not allow this, as I suspect it's because the approximation does not allow for it -> x^y = x ln(y) and the limit of ln(y) as y --> 0 is negative infinity. Also probably has to do with whether or not you can turn the negative decimal back into a fraction.\n",
+    "Bill's note: I don't think Math (the field) will allow this. I suspect it's because the approximation does not allow for it -> x^y = x ln(y) and the limit of ln(y) as y --> 0 is negative infinity. Also, it might have to do with whether or not you can turn the negative decimal back into a fraction? Maybe? I'm not sure. When you raise something to a negative power, you are doing the nth root of that and when you raise to a decimal (say raise 2 to the .75 power), that is actually taking the 4th root of 2 cubed. If the number doesn't terminate, I don't think it would have a fractional equivalent (that the computer can calculate via decimal) so I don't think an answer can be provided for, without getting into some serious math. \n",
     "\n",
-    "at any rate, it does not work without getting a weird answer like this: \n",
+    "At any rate, it does not work without getting a weird answer like this: \n",
     "Calculator.pow(-0.00032, -0.2) =  (4.045084971874737-2.938926261462366j)\n",
     "\n",
-    "so to handle it, we fixed the code to do the following:\n",
-    "\n",
-    "**in the math.pow documentation you get undefined if you use x<0 and y != int**\n",
-    "\n",
-    "**I wanted to recreate that but I couldn't find a math reason explaining it**\n"
+    "so to handle it, we fixed the code to do the following:"
    ]
   },
   {
@@ -971,30 +967,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Complete final test class:"
    ]
@@ -1004,7 +976,138 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from CalculatorClass import Calculator\n",
+    "import unittest, math\n",
+    "\n",
+    "class TestCalculatorMethods(unittest.TestCase):\n",
+    "\n",
+    " # Testing the addition method in the Calculator Class\n",
+    "\n",
+    "    def test_add_positive(self):\n",
+    "        self.assertEqual(Calculator.add(3,5),8,\"Test failed, add(3,5) should equal 8\")\n",
+    "        \n",
+    "    def test_add_negative(self):\n",
+    "        self.assertEqual(Calculator.add(-3,5),2,\"Test failed, add(-3,5) should equal 2\")\n",
+    "\n",
+    "    def test_add_zero(self):\n",
+    "        self.assertEqual(Calculator.add(0,-5),-5,\"Test failed, add(0,-5) should equal -5\")\n",
+    "\n",
+    "    def test_add_none(self):\n",
+    "        self.assertEqual(Calculator.add(None,-5),-5,\"Test failed, add(None,-5) should equal -5\")\n",
+    "\n",
+    "    def test_add_none_reverse(self):\n",
+    "        self.assertEqual(Calculator.add(3,None),3,\"Test failed, add(3,None) should equal -3\")\n",
+    "\n",
+    "    def test_add_decimals(self):\n",
+    "        self.assertEqual(Calculator.add(3.5,3.8),7.3,\"Test failed, add(3.5,3.8) should equal 7.3\")\n",
+    "        \n",
+    "    def test_add_letters(self):\n",
+    "        with self.assertRaises(TypeError,msg=\"Test failed, TypeError not raised when add(3.5,\\\"abc\\\") is called\"):\n",
+    "            Calculator.add(3.5,\"abc\")\n",
+    "            \n",
+    "    def test_add_letters_to_letters(self):\n",
+    "        with self.assertRaises(TypeError,msg=\"Test failed, TypeError not raised when add(\\\"def\\\",\\\"abc\\\") is called\"):\n",
+    "            Calculator.add(\"def\",\"abc\")\n",
+    "\n",
+    " # Testing the subtract method in the Calculator Class\n",
+    "\n",
+    "    def test_subtract_positive(self):\n",
+    "        self.assertEqual(Calculator.subtract(3, 5), -2, \"Test failed, subtracting (3,5) should equal -2\")\n",
+    "\n",
+    "    def test_subtract_none(self):\n",
+    "        self.assertEqual(Calculator.subtract(3, None), 3, \"Test failed, subtracting (3,None) should equal 3\")\n",
+    "\n",
+    "    def test_subtract_decimals(self):\n",
+    "        difference = abs(Calculator.subtract(3.8, 3.5) - 0.3)\n",
+    "        self.assertLessEqual(difference, 0.001, \"Test failed, subtracting (3.8,3.5) should less than or equal 0.3\")\n",
+    "\n",
+    "    def test_subtract_letters_from_letters(self):\n",
+    "        with self.assertRaises(TypeError, msg=\"Test failed, TypeError not raised when subtracting (\\\"def\\\",\\\"abc\\\") is called\"):\n",
+    "            Calculator.subtract(\"def\", \"abc\")\n",
+    "\n",
+    " # Testing the multiply method in the Calculator Class\n",
+    "\n",
+    "    def test_multiply_positive(self):\n",
+    "        self.assertEqual(Calculator.multiply(3, 5), 15, \"Test failed, multiply(3,5) should equal 15\")\n",
+    "\n",
+    "    def test_multiply_zero(self):\n",
+    "        self.assertEqual(Calculator.multiply(3, 0), 0, \"Test failed, multiply(3,0) should equal 0\")\n",
+    "\n",
+    "    def test_multiply_one_negative_num(self):\n",
+    "        self.assertEqual(Calculator.multiply(3, -5), -15, \"Test failed, multiply(3,-5) should equal -15\")\n",
+    "\n",
+    "    def test_multiply_two_negative_num(self):\n",
+    "        self.assertEqual(Calculator.multiply(-3, -5), 15, \"Test failed, multiply(-3, -5) should equal 15\")\n",
+    "\n",
+    "    def test_multiply_none(self):\n",
+    "        self.assertEqual(Calculator.multiply(None, 5), 0, \"Test failed, multiply(None, 5) should equal 0\")\n",
+    "\n",
+    "    def test_multiply_strings(self):\n",
+    "        with self.assertRaises(TypeError, msg=\"Test failed, TypeError not raised when multiplying (\\\"def\\\",\\\"abc\\\") is called\"):\n",
+    "            Calculator.multiply(\"def\", \"abc\")\n",
+    "\n",
+    "    def test_multiply_list(self):\n",
+    "        with self.assertRaises(TypeError, msg=\"Test failed, TypeError not raised when multiplying (\\\"def\\\",\\\"abc\\\") is called\"):\n",
+    "            Calculator.multiply([2,3,4], 1)\n",
+    "\n",
+    "# Testing the divide method in the Calculator Class\n",
+    "\n",
+    "    def test_divide_positive(self):\n",
+    "        self.assertEqual(Calculator.divide(10, 2), 5, \"Test failed, divide(10, 2) should equal 5\")\n",
+    "\n",
+    "    def test_divide_by_zero_error(self):\n",
+    "        with self.assertRaises(ZeroDivisionError,msg=\"Test failed, ZeroDivisionError not raised when dividing by 0\"):\n",
+    "            Calculator.divide(1, 0)\n",
+    "\n",
+    "    def test_divide_result_type(self):\n",
+    "        self.assertEqual(Calculator.divide(3, 5), 0.6, \"Test failed, divide(3, 5) should equal .6\")\n",
+    "\n",
+    "    def test_divide_floating_point_inputs(self):\n",
+    "        self.assertEqual(Calculator.divide(1.5, 0.3), 5, \"Test failed, divide(1.5, 0.3) should equal 5\")\n",
+    "\n",
+    "    def test_divide_negatives(self):\n",
+    "        self.assertEqual(Calculator.divide(-5, -5), 1, \"Test failed, divide(-5, -5) should equal 1\")\n",
+    "\n",
+    "    def test_divide_undefined(self):\n",
+    "        self.assertTrue(math.isnan(Calculator.divide(math.nan,1)), msg=\"Test failed, result not nan\")\n",
+    "\n",
+    "# Testing the \"pow\" (power) method in the Calculator Class\n",
+    "\n",
+    "    def test_pow_positive(self):\n",
+    "        self.assertEqual(Calculator.pow(3, 2), 9, \"Test failed, pow(3, 2) should equal 9\")\n",
+    "\n",
+    "    def test_pow_parameter_2_negative(self):\n",
+    "        self.assertEqual(Calculator.pow(2, -3), 0.125, \"Test failed, pow(2, -3) should equal 0.125\")\n",
+    "\n",
+    "    def test_pow_parameter_2_zero(self):\n",
+    "        self.assertEqual(Calculator.pow(3, 0), 1, \"Test failed, pow(3, 0) should equal 1\")\n",
+    "\n",
+    "    def test_pow_parameter_2_between_0_and_1(self):\n",
+    "        self.assertEqual(Calculator.pow(16, 0.25), 2, \"Test failed, pow(16, 0.25) should equal 2\")\n",
+    "\n",
+    "    def test_pow_parameter1_negative_parameter2_odd(self):\n",
+    "        self.assertEqual(Calculator.pow(-2, 3), -8, \"Test failed, pow(-2, 3)) should equal -8\")\n",
+    "\n",
+    "    def test_pow_parameter1_negative_parameter2_even(self):\n",
+    "        self.assertEqual(Calculator.pow(-2, 2), 4, \"Test failed, pow(-2, 2)) should equal 4\")\n",
+    "\n",
+    "    def test_pow_parameter1_is_zero(self):\n",
+    "        self.assertEqual(Calculator.pow(0, 2), 0, \"Test failed, pow(0, 2) should equal 0\")\n",
+    "\n",
+    "    def test_pow_parameters_are_positive_floats_less_than_1(self):\n",
+    "        self.assertEqual(Calculator.pow(0.0016, 0.25), 0.2, \"Test failed, pow(0.0016, 0.25) should equal 0.2\")\n",
+    "\n",
+    "    def test_pow_param1_pos_floating_param2_neg_floating(self):\n",
+    "        self.assertEqual(Calculator.pow(0.00032, -0.2), 5, \"Test failed, pow(0.00032, -0.2) should equal 5\")\n",
+    "\n",
+    "    def test_pow_parameters_both_neg_floating(self):\n",
+    "        with self.assertRaises(ValueError, msg=\"Test failed, pow(-0.00032, -0.2) should raise ValueError.\"):\n",
+    "            Calculator.pow(-0.00032, -0.2)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1018,7 +1121,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Calculator: \n",
+    "   def add(x, y):\n",
+    "      if x is None:\n",
+    "         x = 0\n",
+    "      if y is None:\n",
+    "         y = 0\n",
+    "      if isinstance(x,(int,float)) == False or isinstance(y,(int,float)) == False:\n",
+    "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
+    "      return x + y\n",
+    "\n",
+    "   def subtract(x, y):\n",
+    "      if x is None:\n",
+    "         x = 0\n",
+    "      if y is None:\n",
+    "         y = 0\n",
+    "      if isinstance(x, (int, float)) == False or isinstance(y, (int, float)) == False:\n",
+    "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
+    "      return x - y\n",
+    "\n",
+    "   def multiply(x, y):\n",
+    "      if x is None:\n",
+    "         x = 0\n",
+    "      if y is None:\n",
+    "         y = 0\n",
+    "      if isinstance(x, (int, float)) == False or isinstance(y, (int, float)) == False:\n",
+    "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
+    "      return x * y\n",
+    "\n",
+    "   def divide(x, y):\n",
+    "      if x is None:\n",
+    "         x = 0\n",
+    "      if y is None:\n",
+    "         y = 0\n",
+    "      if isinstance(x, (int, float)) == False or isinstance(y, (int, float)) == False:\n",
+    "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
+    "      return x / y\n",
+    "\n",
+    "   def pow(x, y):\n",
+    "      if x is None:\n",
+    "         x = 0\n",
+    "      if y is None:\n",
+    "         y = 0\n",
+    "      if isinstance(x, (int, float)) == False or isinstance(y, (int, float)) == False:\n",
+    "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
+    "      if x < 0 and isinstance(y, int) == False:\n",
+    "         raise ValueError(\"Undefined. If x is less than zero, y needs to be an integer.\")\n",
+    "      return x**y"
+   ]
   }
  ],
  "metadata": {
