last minute file edits
last minute file edits before I update my inf502 repo

--- a/Oct20InClassAssignment.ipynb
+++ b/Oct20InClassAssignment.ipynb
@@ -5,7 +5,12 @@
    "metadata": {},
    "source": [
     "# October 20th In-Class Assignment\n",
-    "## Team: Bill Roth and David Brink"
+    "\n",
+    "## Team: Bill Roth and David Brink\n",
+    "\n",
+    "#### Note: if a document with the same name is found in David Brink's repo with a commit timestamp later than this document's timestamp, then David's file shall superscede this document as the group's submission for this assignment.\n",
+    "\n",
+    "(I want to give David the ability/chance to have input on what I did to finish up on this assignment if he wants/desires)"
    ]
   },
   {
