Added some code to handle the case of inputs to pow resulting in imaginary numbers (as well as a couple of other things) and did some final polishing tasks on the notebook (removed blank cells, updated some code and some descriptions, made all the subsection headers the same size)

--- a/Oct20InClassAssignment.ipynb
+++ b/Oct20InClassAssignment.ipynb
@@ -5,19 +5,14 @@
    "metadata": {},
    "source": [
     "# October 20th In-Class Assignment\n",
-    "\n",
-    "## Team: Bill Roth and David Brink\n",
-    "\n",
-    "#### Note: if a document with the same name is found in David Brink's repo with a commit timestamp later than this document's timestamp, then David's file shall superscede this document as the group's submission for this assignment.\n",
-    "\n",
-    "(I want to give David the ability/chance to have input on what I did to finish up on this assignment if he wants/desires)"
+    "## Team: Bill Roth and David Brink"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Following is the initial class definition given to us"
+    "## Following is the initial class definition given to us"
    ]
   },
   {
@@ -49,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Addition Tests"
+    "## Testing the add() function"
    ]
   },
   {
@@ -288,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtraction Tests"
+    "## Testing the subtract() function"
    ]
   },
   {
@@ -329,11 +324,11 @@
    "outputs": [],
    "source": [
     "    def test_subtract_decimals(self):\n",
-    "        self.assertEqual(Calculator.subtract(3.8, 3.5), 0.3, \"Test failed, subtracting (3.8,3.5) should equal 0.3\")\n",
+    "        self.assertEqual(Calculator.subtract(3.8, 3.5), 0.3, \"Test failed, subtract(3.8,3.5) should equal 0.3\")\n",
     "        \n",
     "    def test_subtract_decimals(self):\n",
     "        difference = abs(Calculator.subtract(3.8, 3.5) - 0.3)\n",
-    "        self.assertLessEqual(difference, 0.001, \"Test failed, subtracting (3.8,3.5) should less than or equal 0.3\")"
+    "        self.assertLessEqual(difference, 0.001, \"Test failed, subtract(3.8,3.5) should be within 0.001 of 0.3\")"
    ]
   },
   {
@@ -350,7 +345,7 @@
    "outputs": [],
    "source": [
     "    def test_subtract_none(self):\n",
-    "        self.assertEqual(Calculator.subtract(3, None), 3, \"Test failed, subtracting (3,None) should equal 3\")"
+    "        self.assertEqual(Calculator.subtract(3, None), 3, \"Test failed, subtract(3,None) should equal 3\")"
    ]
   },
   {
@@ -375,35 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This test confirms that subtraction resulting in negative numbers works"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This test confirms that subtraction with zero works as expected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tests for the multiply() function"
+    "## Tests for the multiply() function"
    ]
   },
   {
@@ -531,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test for the divide() function"
+    "## Test for the divide() function"
    ]
   },
   {
@@ -641,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing the pow() function"
+    "## Testing the pow() function"
    ]
   },
   {
@@ -654,9 +621,7 @@
     "\n",
     ">Test failed, pow(3, 2) should equal 9  \n",
     ">9 != None  \n",
-    ">  \n",
-    ">Expected :None  \n",
-    ">Actual   :9  \n"
+    "\n"
    ]
   },
   {
@@ -886,14 +851,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At first, we tried to test whether or not pow() works correctly with a first parameter between -1 and 0 and a second parameter between -1 and 0.\n",
+    "The following 3 tests failed:\n",
+    "* test_pow_param1_neg_floating_param2_neg_floating\n",
+    "* test_pow_odd_root_of_negative\n",
+    "* test_pow_even_root_of_negative\n",
     "\n",
-    "Bill's note: I don't think Math (the field) will allow this. I suspect it's because the approximation does not allow for it -> x^y = x ln(y) and the limit of ln(y) as y --> 0 is negative infinity. Also, it might have to do with whether or not you can turn the negative decimal back into a fraction? Maybe? I'm not sure. When you raise something to a negative power, you are doing the nth root of that and when you raise to a decimal (say raise 2 to the .75 power), that is actually taking the 4th root of 2 cubed. If the number doesn't terminate, I don't think it would have a fractional equivalent (that the computer can calculate via decimal) so I don't think an answer can be provided for, without getting into some serious math. \n",
+    "We found that the ** operator seems to just remove the negative from the base when calculating a power equivalent of an odd root of a negative base.  \n",
     "\n",
-    "At any rate, it does not work without getting a weird answer like this: \n",
-    "Calculator.pow(-0.00032, -0.2) =  (4.045084971874737-2.938926261462366j)\n",
+    "After doing these tests, we remembered that the square root of a negative number should result in an imaginary number.\n",
     "\n",
-    "so to handle it, we fixed the code to do the following:"
+    "We handled this situation by raising a value error when the base is negative and the exponent value would be the equivalent of taking an even root.  We also removed the negative if the base was negative and the exponent was the equivalent of an odd root, and then we added that negative back into the final result when we returned it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    def test_pow_param1_neg_floating_param2_neg_floating(self):\n",
+    "        self.assertEqual(Calculator.pow(-0.00032, -0.2), -5, \"Test failed, pow(0.00032, -0.2) should equal -5\")\n",
+    "\n",
+    "    def test_pow_odd_root_of_negative(self):\n",
+    "        difference = abs(Calculator.pow(-6, 0.1111111111111111) - -1.220284936)\n",
+    "        self.assertLessEqual(difference, 0.00001, \"Test failed, pow(-6, 1/9) should be within 0.00001 of -1.220284936\")\n",
+    "            \n",
+    "    def test_pow_even_root_of_negative(self):\n",
+    "        with self.assertRaises(ValueError,msg=\"Test failed, Calculator.pow(-6, 0.5) should raise ValueError\"):\n",
+    "            Calculator.pow(-6, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following is our Calculator class after fixes were applied to make the above tests pass"
    ]
   },
   {
@@ -942,20 +935,33 @@
     "   def pow(x, y):\n",
     "      if x is None:\n",
     "         x = 0\n",
+    "          \n",
     "      if y is None:\n",
     "         y = 0\n",
+    "          \n",
     "      if isinstance(x, (int, float)) == False or isinstance(y, (int, float)) == False:\n",
     "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
-    "      if x < 0 and isinstance(y, int) == False:\n",
-    "         raise ValueError(\"Undefined. If x is less than zero, y needs to be an integer.\")\n",
-    "      return x**y"
+    "      \n",
+    "      negativeToAddBackIn = 1\n",
+    "      if x < 0 and abs(y)<1:\n",
+    "         exponentFraction = Fraction(y).limit_denominator()\n",
+    "         exponentDenominator = exponentFraction.denominator\n",
+    "         \n",
+    "         isEvenRoot = Calculator.isEven(exponentDenominator)\n",
+    "         \n",
+    "         if isEvenRoot:\n",
+    "            raise ValueError(\"{0} to the {1} power results in an imaginary number which is not supported by this function\".format(x,exponentFraction))\n",
+    "         x=x*-1\n",
+    "         negativeToAddBackIn=-1\n",
+    "         \n",
+    "      return negativeToAddBackIn*(x**y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test to see if ValueError returned for inputs of -1 > x > 0 and -1 > y > 0"
+    "Lastly, we created a function in the Calculator class called \"isEven\" (for use in the pow() function) "
    ]
   },
   {
@@ -964,9 +970,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    def test_pow_parameters_both_neg_floating(self):\n",
-    "        with self.assertRaises(ValueError, \"Test failed, pow(-0.00032, -0.2) should raise ValueError.\"):\n",
-    "            Calculator.pow(-0.00032, -0.2)"
+    "   def isEven(numberToTest):\n",
+    "      if isinstance(numberToTest, (int))==False:\n",
+    "         return False\n",
+    "      if numberToTest%2==0:\n",
+    "         return True\n",
+    "      \n",
+    "      return False "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "....and we created the following tests to test this function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    def test_isEven_with_even_number(self):\n",
+    "        self.assertTrue(Calculator.isEven(4), \"Test failed, function should return true for 4\")\n",
+    "        \n",
+    "    def test_isEven_with_odd_number(self):\n",
+    "        self.assertFalse(Calculator.isEven(5), \"Test failed, function should return false for 5\")"
    ]
   },
   {
@@ -1025,7 +1056,7 @@
     "\n",
     "    def test_subtract_decimals(self):\n",
     "        difference = abs(Calculator.subtract(3.8, 3.5) - 0.3)\n",
-    "        self.assertLessEqual(difference, 0.001, \"Test failed, subtracting (3.8,3.5) should less than or equal 0.3\")\n",
+    "        self.assertLessEqual(difference, 0.001, \"Test failed, subtracting (3.8,3.5) should be within 0.001 of 0.3\")\n",
     "\n",
     "    def test_subtract_letters_from_letters(self):\n",
     "        with self.assertRaises(TypeError, msg=\"Test failed, TypeError not raised when subtracting (\\\"def\\\",\\\"abc\\\") is called\"):\n",
@@ -1106,12 +1137,28 @@
     "    def test_pow_param1_pos_floating_param2_neg_floating(self):\n",
     "        self.assertEqual(Calculator.pow(0.00032, -0.2), 5, \"Test failed, pow(0.00032, -0.2) should equal 5\")\n",
     "\n",
-    "    def test_pow_parameters_both_neg_floating(self):\n",
-    "        with self.assertRaises(ValueError, msg=\"Test failed, pow(-0.00032, -0.2) should raise ValueError.\"):\n",
-    "            Calculator.pow(-0.00032, -0.2)\n",
+    "    def test_pow_param1_neg_floating_param2_neg_floating(self):\n",
+    "        self.assertEqual(Calculator.pow(-0.00032, -0.2), -5, \"Test failed, pow(0.00032, -0.2) should equal -5\")\n",
     "\n",
+    "    def test_pow_odd_root_of_negative(self):\n",
+    "        difference = abs(Calculator.pow(-6, 0.1111111111111111) - -1.220284936)\n",
+    "        self.assertLessEqual(difference, 0.00001, \"Test failed, pow(-6, 1/9) should be within 0.00001 of -1.220284936\")\n",
+    "            \n",
+    "    def test_pow_even_root_of_negative(self):\n",
+    "        with self.assertRaises(ValueError,msg=\"Test failed, Calculator.pow(-6, 0.5) should raise ValueError\"):\n",
+    "            Calculator.pow(-6, 0.5)\n",
+    "\n",
+    "# Testing the \"isEven\" function in the Calculator Class\n",
+    "\n",
+    "    def test_isEven_with_even_number(self):\n",
+    "        self.assertTrue(Calculator.isEven(4), \"Test failed, function should return true for 4\")\n",
+    "        \n",
+    "    def test_isEven_with_odd_number(self):\n",
+    "        self.assertFalse(Calculator.isEven(5), \"Test failed, function should return false for 5\")\n",
+    "        \n",
+    "        \n",
     "if __name__ == '__main__':\n",
-    "    unittest.main()"
+    "    unittest.main()\n"
    ]
   },
   {
@@ -1127,6 +1174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "from fractions import Fraction\n",
+    "\n",
     "class Calculator: \n",
     "   def add(x, y):\n",
     "      if x is None:\n",
@@ -1164,16 +1214,46 @@
     "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
     "      return x / y\n",
     "\n",
+    "   def isEven(numberToTest):\n",
+    "      if isinstance(numberToTest, (int))==False:\n",
+    "         return False\n",
+    "      if numberToTest%2==0:\n",
+    "         return True\n",
+    "      \n",
+    "      return False \n",
+    "\n",
     "   def pow(x, y):\n",
     "      if x is None:\n",
     "         x = 0\n",
+    "          \n",
     "      if y is None:\n",
     "         y = 0\n",
+    "          \n",
     "      if isinstance(x, (int, float)) == False or isinstance(y, (int, float)) == False:\n",
     "         raise TypeError(\"Both parameters in the function need to be numeric\")\n",
-    "      if x < 0 and isinstance(y, int) == False:\n",
-    "         raise ValueError(\"Undefined. If x is less than zero, y needs to be an integer.\")\n",
-    "      return x**y"
+    "      \n",
+    "      negativeToAddBackIn = 1\n",
+    "      if x < 0 and abs(y)<1:\n",
+    "         exponentFraction = Fraction(y).limit_denominator()\n",
+    "         exponentDenominator = exponentFraction.denominator\n",
+    "         \n",
+    "         isEvenRoot = Calculator.isEven(exponentDenominator)\n",
+    "         \n",
+    "         if isEvenRoot:\n",
+    "            raise ValueError(\"{0} to the {1} power results in an imaginary number which is not supported by this function\".format(x,exponentFraction))\n",
+    "         x=x*-1\n",
+    "         negativeToAddBackIn=-1\n",
+    "         \n",
+    "      return negativeToAddBackIn*(x**y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sidenote:\n",
+    "\n",
+    "Floating point errors caused us a lot of problems when testing values very close to zero in the pow function.  These errors were consequential when testing the pow function and they did not seem to be deterministic so we just avoided testing very close to zero, especially with the base parameter."
    ]
   }
  ],
